Added back profile for isort

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
     
     - name: Check imports with isort
       run: |
-        isort --check-only --diff .
+        isort --check-only --diff --profile black .
     
     - name: Type check with mypy
       run: |
