--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ flake8==6.1.0
 black==24.10.0
 isort==5.12.0
 mypy==1.7.0
-bandit==1.7.7
+bandit==1.7.8
+pbr>=5.11.0
 safety>=3.0.0
 
 # Documentation
