--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,13 +31,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    #- name: Check formatting with black
-      #run: |
-        #black --check --diff .
+    - name: Check formatting with black
+      run: |
+        black --check --diff .
     
-    #- name: Check imports with isort
-      #run: |
-        #isort --check-only --diff --profile black .
+    - name: Check imports with isort
+      run: |
+        isort --check-only --diff --profile black .
     
     #- name: Type check with mypy
       #run: |
